@@ -32,10 +32,10 @@ import com.yubico.internal.util.CertificateParser;
 import com.yubico.internal.util.CollectionUtil;
 import com.yubico.internal.util.OptionalUtil;
 import com.yubico.webauthn.attestation.AttestationTrustSource;
-import com.yubico.webauthn.attestation.matcher.ExtensionMatcher;
 import com.yubico.webauthn.data.ByteArray;
 import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
+import yubico.webauthn.attestation.matcher.ExtensionMatcher;
 
 import java.security.cert.CertificateException;
 import java.security.cert.X509Certificate;
@@ -57,7 +57,7 @@ public final class YubicoJsonMetadataService implements AttestationTrustSource {
   private static final String SELECTOR_PARAMETERS = "parameters";
 
   private static final Map<String, DeviceMatcher> DEFAULT_DEVICE_MATCHERS =
-      ImmutableMap.of(ExtensionMatcher.SELECTOR_TYPE, new ExtensionMatcher());
+      Map.of(ExtensionMatcher.SELECTOR_TYPE, new ExtensionMatcher());
 
   private final Collection<MetadataObject> metadataObjects;
   private final Map<String, DeviceMatcher> matchers;
